--- a/app.json
+++ b/app.json
@@ -9,8 +9,8 @@
     "tiktok",
     "jaybee"
   ],
-  "repository": https://github.com/Azaz511/TikTok-Downloader-Bot/tree/master",
-  "website": "https://github.com/Azaz511/TikTok-Downloader-Bot/tree/master",
+  "repository"https://github.com/Azaz511/TikTok-Downloader-Bot",
+  "website": "https://github.com/Azaz511/TikTok-Downloader-Bot",
   "env": {
     "BOT_TOKEN": {
       "description": "Your bot Bot Token, get this value from @BotFather.",
